--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -48,7 +48,9 @@ nav {
 	margin: auto;
 	position: fixed;
 	background-color: #424242;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 /*-------- CONTAINER ------------*/
@@ -181,7 +183,7 @@ nav img {
 
 .whobox {
 	height: 299px;
-	max-width: 1280px;
+	max-width: 800px;
 	margin: auto;
 	background-color: midnightblue;
 }
@@ -189,10 +191,21 @@ nav img {
 /*----------- HOW --------------*/
 
 .howbox {
-	height: 599px;
+	height: auto;
 	max-width: 1280px;
 	margin: auto;
+	position: relative;
 	background-color: midnightblue;
+	z-index: 20;
+	-moz-box-shadow: 
+	0 -4px 6px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19), 
+	0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	-webkit-box-shadow: 
+  	0 -4px 6px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19),
+  	0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	box-shadow: 
+  	0 -4px 6px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19),
+  	0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .design-devbox {
@@ -245,8 +258,9 @@ nav img {
 
 .whatbox {
 	height: 299px;
-	max-width: 1280px;
+	max-width: 800px;
 	margin: auto;
+	position: relative;
 	background-color: midnightblue;
 }
 
