--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,10 +15,11 @@
 	box-sizing: border-box;
 }
 
-h2 {
+h1, h2 {
 	font-family: 'Montserrat', sans-serif;
 	color: #fafafa;
 	text-align: center;
+	padding: 50px 0 30px 0;
 }
 
 p {
@@ -182,10 +183,48 @@ nav img {
 /*---------- WHO --------------*/
 
 .whobox {
-	height: 299px;
+	height: auto;
 	max-width: 800px;
 	margin: auto;
+	padding-bottom: 30px;
 	background-color: midnightblue;
+}
+
+.whobox h2 {
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.whobox:hover h2 {
+	text-shadow: 0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+.whobox a {
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.whobox:hover a {
+	box-shadow: 0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+.whotext {
+	height: auto;
+	max-width: 700px;
+	margin: auto;
+	padding-bottom: 30px;
 }
 
 /*----------- HOW --------------*/
@@ -194,18 +233,19 @@ nav img {
 	height: auto;
 	max-width: 1280px;
 	margin: auto;
+	padding-bottom: 30px;
 	position: relative;
 	background-color: midnightblue;
 	z-index: 20;
 	-moz-box-shadow: 
-	0 -4px 6px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19), 
-	0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	0 -6px 9px 0 rgba(0, 0, 0, 0.2), 0 -9px 30px 0 rgba(0, 0, 0, 0.19), 
+	0 6px 9px 0 rgba(0, 0, 0, 0.2), 0 9px 30px 0 rgba(0, 0, 0, 0.19);
   	-webkit-box-shadow: 
-  	0 -4px 6px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19),
-  	0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	0 -6px 9px 0 rgba(0, 0, 0, 0.2), 0 -9px 30px 0 rgba(0, 0, 0, 0.19),
+  	0 6px 9px 0 rgba(0, 0, 0, 0.2), 0 9px 30px 0 rgba(0, 0, 0, 0.19);
   	box-shadow: 
-  	0 -4px 6px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19),
-  	0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	0 -6px 9px 0 rgba(0, 0, 0, 0.2), 0 -9px 30px 0 rgba(0, 0, 0, 0.19),
+  	0 6px 9px 0 rgba(0, 0, 0, 0.2), 0 9px 30px 0 rgba(0, 0, 0, 0.19);
 }
 
 .design-devbox {
@@ -254,23 +294,106 @@ nav img {
 	background-color: orange;
 }
 
+.howbox h2 {
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.howbox:hover h2 {
+	text-shadow: 0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+.howbox a {
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.howbox:hover a {
+	box-shadow: 0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
 /*------------ WHAT -------------*/
 
 .whatbox {
-	height: 299px;
+	height: auto;
 	max-width: 800px;
 	margin: auto;
+	padding-bottom: 30px;
 	position: relative;
 	background-color: midnightblue;
+}
+
+.whatbox h2 {
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.whatbox:hover h2 {
+	text-shadow: 0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+.whatbox a {
+	-webkit-transition: all 1s ease;
+	transition: all 1s ease;
+}
+
+.whatbox:hover a {
+	box-shadow: 0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
 
 /*---------- WHERE --------------*/
 
 .wherecon {
-	height: 200px;
+	height: auto;
 	width: 100%;
+	padding-bottom: 30px;
+	position: relative;
 	background-image: url(../img/background-where.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
+	-moz-box-shadow: 
+	0 -6px 9px 0 rgba(0, 0, 0, 0.2), 0 -9px 30px 0 rgba(0, 0, 0, 0.19), 
+	0 6px 9px 0 rgba(0, 0, 0, 0.2), 0 9px 30px 0 rgba(0, 0, 0, 0.19);
+  	-webkit-box-shadow: 
+  	0 -6px 9px 0 rgba(0, 0, 0, 0.2), 0 -9px 30px 0 rgba(0, 0, 0, 0.19),
+  	0 6px 9px 0 rgba(0, 0, 0, 0.2), 0 9px 30px 0 rgba(0, 0, 0, 0.19);
+  	box-shadow: 
+  	0 -6px 9px 0 rgba(0, 0, 0, 0.2), 0 -9px 30px 0 rgba(0, 0, 0, 0.19),
+  	0 6px 9px 0 rgba(0, 0, 0, 0.2), 0 9px 30px 0 rgba(0, 0, 0, 0.19);
+}
+
+.wherebutton {
+	height: auto;
+	max-width: 280px;
+	margin: auto;
+}
+
+.wherebutton a {
+	height: auto;
+	width: auto;
 }
 
