--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,7 +23,7 @@ h1, h2 {
 }
 
 p {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	color: #fafafa;
 	text-align: center;
 }
@@ -55,7 +55,7 @@ nav {
 	right: 0;
 	margin: auto;
 	position: fixed;
-	background-color: #424242;
+	background-color: #161718;
 	-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -135,7 +135,7 @@ nav a, .footnav a {
 	text-align: center;
 	display: block;
 	color: #fafafa;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Cabin', sans-serif;
 }
 
 nav img {
@@ -181,7 +181,7 @@ footer p {
 }
 
 .poemcon p {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	font-style: italic;
 	font-size: 1vw;
 	color: #fafafa;
@@ -443,5 +443,28 @@ footer p {
 .wherebutton a {
 	height: auto;
 	width: auto;
+}
+
+/*------------------------------
+
+            WHAT      
+
+-------------------------------*/
+
+
+/*------------ PROJECTS -------------*/
+
+.what .howbox {
+	height: 100px;
+	max-width: 1280px;
+	background-color: #2525a8;
+}
+
+/*------------ DESCRIPTION -------------*/
+
+.descriptcon {
+	height: 500px;
+	max-width: 1120px;
+	background-color: #1f1f8c;
 }
 
