--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -456,15 +456,18 @@ footer p {
 
 .what .howbox {
 	height: 100px;
-	max-width: 1280px;
+	max-width: 480px;
 	background-color: #2525a8;
 }
+
+
 
 /*------------ DESCRIPTION -------------*/
 
 .descriptcon {
 	height: 500px;
 	max-width: 1120px;
+	margin: auto;
 	background-color: #1f1f8c;
 }
 
