--- a/stylesheets/general.css
+++ b/stylesheets/general.css
@@ -226,6 +226,7 @@ header {
 	width: 100%;
 	padding-bottom: 40px;
 	position: relative;
+	z-index: 30;
 	background-image: url(../img/background-where.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
